--- a/src/style.css
+++ b/src/style.css
@@ -4,28 +4,17 @@
 
 @layer base {
   @font-face {
-    font-family: 'Academy Engraved';
-    src: local('Academy Engraved LET'), local('AcademyEngravedLetPlain'),
-         url('/font/AcademyEngravedLetPlain.ttf') format('truetype');
+    font-family: 'Bagatela';
+    src: url('/font/Bagatela-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
   }
 
   @font-face {
-    font-family: 'Barlow';
-    src: local('Barlow ExtraLight'), local('Barlow-ExtraLight'),
-         url('/font/Barlow-ExtraLight.ttf') format('truetype');
-    font-weight: 200;
-    font-style: normal;
-    font-display: swap;
-  }
-
-  @font-face {
-    font-family: 'Barlow';
-    src: local('Barlow Medium'), local('Barlow-Medium'),
-         url('/font/Barlow-Medium.ttf') format('truetype');
-    font-weight: 500;
+    font-family: 'Roc Grotesk';
+    src: url('/font/RocGrotesk-Regular.ttf') format('truetype');
+    font-weight: 400;
     font-style: normal;
     font-display: swap;
   }
@@ -40,7 +29,7 @@
   }
 
   body,p {
-    font-family: 'Barlow', 'Inter', 'Helvetica Neue', 'Segoe UI', system-ui, sans-serif !important;
+    font-family: 'Roc Grotesk', 'Inter', 'Helvetica Neue', 'Segoe UI', system-ui, sans-serif !important;
     font-weight: 400;
   }
 
@@ -50,7 +39,7 @@
   h4,
   h5,
   h6 {
-    font-family: 'Academy Engraved', serif !important;
+    font-family: 'Bagatela', serif !important;
     font-weight: 400;
   }
 
@@ -64,7 +53,7 @@
 body {
   background-color: #0a0a0a;
   color: #e5e5e5;
-  font-family: 'Barlow', 'Inter', 'Helvetica Neue', 'Segoe UI', system-ui, sans-serif;
+  font-family: 'Roc Grotesk', 'Inter', 'Helvetica Neue', 'Segoe UI', system-ui, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
